[project]
name = "PasarguardBot"
version = "1.1.0"
description = "Pasarguard Telegram bot"
requires-python = ">=3.14,<3.15"
dependencies = [
    "aiofasttelethonhelper>=0.1.3",
    "aiohttp>=3.14.0",
    "alembic>=1.18.4",
    "apscheduler>=3.11.2",
    "asyncmy>=0.2.11; sys_platform != 'win32'",
    "fastapi>=0.136.3",
    "httpx>=0.28.1",
    "imagehash>=4.3.2",
    "jdatetime>=5.3.0",
    "pasarguard>=2.3.0",
    "persiantools>=5.5.1",
    "pillow>=12.2.0",
    "python-decouple>=3.8",
    "python-multipart>=0.0.32",
    "pytz>=2026.2",
    "qrcode>=8.2",
    "redis>=8.0.0",
    "psutil>=7.0.0",
    "rich>=14.0.0",
    "colorama>=0.4.6; sys_platform == 'win32'",
    "sqlalchemy[asyncio]>=2.0.51",
    "uvicorn>=0.49.0",
    "uvloop>=0.22.1; sys_platform != 'win32'",
    "cryptography>=49.0.0",
    "cryptg>=0.6.0",
    "telethon>=1.44.0",
]

# ----------------- Ruff ----------------- #
[tool.ruff]
line-length = 120
target-version = "py314"

exclude = [
    ".git",
    ".venv",
    "__pycache__",
    ".mypy_cache",
    ".pytest_cache",
    ".ruff_cache",
    "app/db/migrations",
]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "F",      # pyflakes: unused imports, undefined names, etc.
    "I",      # isort: import sorting
    "UP",     # pyupgrade: modern Python syntax
    "B",      # flake8-bugbear: common bugs
    "ASYNC",  # async/await common mistakes
    "C4",     # comprehensions improvements
    "SIM",    # simplify code
    "RET",    # return statement improvements
    "RUF",    # Ruff-specific rules
]

ignore = [
    "E501",    # line length handled by formatter
    "B008",    # allow function calls in default args when project already uses them
    "RUF001",  # allow Persian/Unicode text that may look ambiguous
    "RUF002",
    "RUF003",
]

fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.isort]
known-first-party = ["app"]
combine-as-imports = true
split-on-trailing-comma = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
docstring-code-format = true
docstring-code-line-length = 120

[dependency-groups]
dev = [
    "aiosqlite>=0.21.0",
    "pytest>=8.4.0",
    "pytest-asyncio>=1.0.0",
    "pytest-mock>=3.14.0",
    "ruff>=0.15.18",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
filterwarnings = [
    "ignore::DeprecationWarning",
]
